--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -20,11 +20,29 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
                         <li class="nav-item">
-                           
+                            <
+                            <ul class="navbar-nav">
+                                <li class="nav-item">
+                                    <ul class="navbar-nav">
+                                        <li class="nav-item">
+                                            <a class="nav-link" asp-controller="Home" asp-action="Index">Home</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" asp-controller="LecturerClaims" asp-action="Index">View Claims</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" asp-controller="LecturerClaims" asp-action="Create">Create Claim</a>
+                                        </li>
+                                    </ul>
+
+                                </li>
+                            </ul>
+
                         </li>
+
+                        </li>
+                   
                     </ul>
                 </div>
             </div>
