--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -37,6 +37,10 @@
                                         <li class="nav-item">
                                             <a class="nav-link" href="@Url.Action("TrackClaim", "LecturerClaims")">Track Claims</a>
                                         </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" asp-controller="HR" asp-action="Index">HR Dashboard</a>
+                                        </li>
+
 
                                     </ul>
 
